change contsumy response shape and apply date&number formatting